Make sure everything looks good on mobile

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -7,9 +7,18 @@
   margin-top: 100px;
   padding: 100px $gutter 0;
 
+  @include breakpoint(mobile) {
+    margin-top: $gutter;
+    padding: $gutter $gutter/2 0;
+  }
+
   &.stretched {
     padding: 100px $gutter;
     background: $color-grey;
+
+    @include breakpoint(mobile) {
+      padding: $gutter $gutter/2;
+    }
 
     + .home-section {
       margin-top: 0;
