--- a/source/stylesheets/pages/home/_grid-items.scss
+++ b/source/stylesheets/pages/home/_grid-items.scss
@@ -15,4 +15,10 @@
     margin-top: $gutter;
     font-size: $font-size-base;
   }
+
+  @include breakpoint(mobile) {
+    margin-top: $gutter/2;
+    padding-top: $gutter/2;
+    border-top: 1px solid $color-grey;
+  }
 }
